# mac-keyboard-brightness

./: .gitignore  LICENSE  README.md  accelerometer  accelerometer.py  ambient-light  ambient_light.py  audio.py  bandpass  bandpass.py  blink  dbrightness  display-brightness.c  fan-speed  fan_speed.py  frequency-shift  frequency_shift.py  gyroscope  gyroscope.py  heartbeat  heartbeat.py  kbrightness  kbrightness.swift  keyboard-brightness  keyboard-brightness.c  keyboard_brightness.py  lid-angle  lid_angle.py  metronome  metronome.py  microphone  microphone.py  motion_live.py  pyproject.toml  requirements.txt  screen-brightness  screen_brightness.py  sine  sine.py  speaker  (+6 more)
KBPulse/: LICENSE  PROFILES.md  README.md  VENDORED.md
KBPulse/KBPulse/: KBPAnimation.h  KBPAnimation.m  KBPAnimator.h  KBPAnimator.m  KBPProfile.h  KBPProfile.m  KBPPulseManager.h  KBPPulseManager.m  KeyboardBrightnessClient.h  OSDManager.h  main.m
KBPulse/KBPulse.xcodeproj/: project.pbxproj
KBPulse/KBPulse.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lib/: KBPulse  __init__.py  bootstrap.py  dsp.py  hardware.py  requirements.txt  sensor_tone.py  signal_stream.py  spu_sensor.py
lib/toolkit/: __init__.py
scripts/: rebuild_kbpulse_binary.sh
toolkit/: bootstrap.py  dsp.py  hardware.py  signal_stream.py
