[project]
name = "mac-hardware-toys"
version = "0.2.1"
description = "A collection of pipe-able commands for playing with Apple Silicon sensor hardware and peripherals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pywavelets>=1.4",
    "sounddevice>=0.4",
]

[tool.setuptools]
package-dir = {"" = "lib"}
py-modules = ["bootstrap", "dsp", "hardware", "sensor_tone", "signal_stream", "spu_sensor"]
script-files = [
    "accelerometer",
    "ambient-light",
    "bandpass",
    "fan-speed",
    "frequency-shift",
    "gyroscope",
    "heartbeat",
    "keyboard-brightness",
    "lid-angle",
    "metronome",
    "microphone",
    "screen-brightness",
    "sine",
    "speaker",
    "visualizer",
    "volume-shift",
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
